[project]
name = "epik-gh"
version = "0.1.0"
description = "GitHub MCP server wrapping the gh CLI"
readme = "README.md"
authors = [
    { name = "W.P. McNeill", email = "billmcn@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "anyio",
]

[project.scripts]
epik-gh = "epik_gh.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.12",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ANN", # flake8-annotations
    "N",   # pep8-naming
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
